# laylay

./: .gitignore  Cargo.toml  README.md
assets/: boid.blend  boid.glb  diamond.blend  diamond.glb  shrine.blend  shrine.glb
assets/texts/: quotes.txt
assets/texts/stories/: gay-wizard.txt  humphry-the-hedghog.txt  pidgen-the-fox.txt  the-lion-and-the-monkey.txt
client/: Cargo.toml
client/src/: main.rs  model.rs  state.rs
laylay-client/: Cargo.toml
laylay-client/src/: app.rs  errors.rs  lib.rs  logger.rs  main.rs  state.rs
laylay-client/src/context/: counter.rs  mod.rs  network.rs  render.rs  shader.wgsl  xr.rs
laylay-client/src/math/: matrix.rs  mod.rs  quaternion.rs  vector.rs
laylay-client/src/scene/: camera.rs  drawable.rs  light.rs  material.rs  mod.rs  model.rs  node.rs
laylay-common/: Cargo.toml  build.rs
laylay-common/src/: info.rs  lib.rs  version.rs
laylay-package/: Cargo.toml
laylay-package/src/: main.rs
laylay-server/: Cargo.toml
laylay-server/src/: client.rs  database.rs  errors.rs  main.rs  schema.sql  server.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  state.rs
