[profile.dev]
strip = true
opt-level = 1

[profile.release]
strip = true
lto = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "laylay-client",
    "laylay-server",
    "laylay-common",
    "laylay-package"
]
resolver = "2"

[workspace.dependencies]
mlua = { version = "0.9.8", features = ["luau", "parking_lot", "vendored"] }
