[package]
name = "laylay-common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
borsh = { version = "1.5.0", features = ["derive", "bytes"] }
bytes = "1.6.0"
cbc = { version = "0.1.2", features = ["std"] }
k256 = { version = "0.13.3", features = ["ecdh"] }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full", "parking_lot"] }
