[package]
name = "laylay-package"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
mlua.workspace = true
zip = { version = "2.1.1", default-features = false, features = ["zstd"] }
