[package]
name = "laylay-server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
parking_lot = "0.12.3"
tokio = { version = "1.38.0", features = ["full", "parking_lot"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
laylay-common = { path = "../laylay-common" }
rusqlite = "0.31.0"
