[package]
name = "laylay-server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
parking_lot = "0.12.3"
tokio = { version = "1.42.0", features = ["full", "parking_lot"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
laylay-common = { path = "../laylay-common" }
rusqlite = "0.32.1"
hex = "0.4.3"
