[package]
name = "laylay-server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
parking_lot = "0.12.1"
surrealdb = "1.1.1"
tokio = { version = "1.35.1", features = ["full", "parking_lot"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
